@@ -1,3 +1,9 @@
+2010-07-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Extend the test suite.
+
+	* 0_slc/1_createargs/shfloat.c. New. 
+
 2010-07-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Extend the test suite.
